# CommsAnalystAgent

./: .dockerignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/ISSUE_TEMPLATE/: report-request.md  report-request.yml
.github/workflows/: run-comms-analyst-agent.yml  run-comms-analyst-from-issue.yml  test-slack.yml
agents/: comms-intelligence-analyst.md
config/: monitoring_target.sample.json
config/templates/: competitor-reaction.json  crisis-monitoring.json  executive-announcement.json  product-launch.json
docs/: index.md
src/comms_analyst_agent/: __init__.py  analysis.py  chat.py  cli.py  collectors.py  config.py  models.py  pipeline.py  prompt_parser.py  reporting.py  web.py
src/comms_analyst_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_analysis.py  test_collectors.py  test_config.py  test_pipeline.py  test_prompt_parser.py  test_reporting.py  test_web.py
