[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comms-analyst-agent"
version = "0.1.0"
description = "MVP communications intelligence analyst agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
comms-analyst-agent = "comms_analyst_agent.cli:main"
comms-analyst-chat = "comms_analyst_agent.chat:main"
comms-analyst-web = "comms_analyst_agent.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
